@@ -81,6 +81,7 @@
 			<label index="pI_hitsPeriod">Hits Period</label>
 			<label index="pI_hits24hours">Last 24 hours</label>
 			<label index="pI_hits10days">Last 10 days</label>
+			<label index="content_from_pid_title">Page uses content from this page: %s</label>
 		</languageKey>
 	</data>
 </T3locallang>
